--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "name": "github-stats",
     "version": "1.0.0",
     "scripts": {
-        "start": "node server.js"
+        "start": "nodemon server.js"
     },
     "dependencies": {
         "axios": "^1.3.2",
         "dotenv": "^16.4.7",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "nodemon": "^3.1.9"
     }
 }
