--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
         {
             "src": "/chart",
             "dest": "server.js"
+        },
+        {
+            "src": "/summary",
+            "dest": "server.js"
         }
     ]
 }
